Just fix misprint...

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,3 +21,6 @@ r.EarlyZPass=2
 r.EarlyZPassOnlyMaterialMasking=True
 r.VSync=1
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/CastleDefender.ChracterHealthComponent",NewName="/Script/CastleDefender.CharacterHealthComponent")
